ndb - bug#52055 - fix problem where index could get too high id, causing assertion